# Researchify

./: .gitignore  README.md  ai-research-agent-platform-spec.md  render.yaml
backend/: gen_jwt_secret.ps1  pyproject.toml  requirements.txt  worker.py
backend/alembic/: env.py
backend/alembic/versions/: 0ebd6282b0b8_initial.py  6d535755c8fd_fix_datetime_timezone_cols.py
backend/app/: config.py  db.py  main.py  models.py  pipeline.py  queue.py  schemas.py  security.py
backend/app/agents/: graph.py  llm.py  nodes.py  state.py  tools.py
backend/app/routers/: auth.py  integrations.py  projects.py
backend/app/services/: delivery.py  report_builder.py  storage.py  telegram_poll.py
backend/app/templates/: email.html  report.html
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  main.tsx  useAuth.ts  useUIStore.ts
frontend/src/components/: BackendLoadingScreen.tsx  Layout.tsx  NewProjectModal.tsx  StatusBadge.tsx
frontend/src/pages/: Dashboard.tsx  LoginPage.tsx  ProjectPage.tsx  SettingsPage.tsx
