[project]
name = "research-platform-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aioboto3>=15.5.0",
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "authlib>=1.7.2",
    "cryptography>=49.0.0",
    "fastapi>=0.139.2",
    "google-api-python-client>=2.198.0",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "langchain>=1.3.14",
    "langchain-google-genai>=4.2.7",
    "langgraph>=1.2.9",
    "markdown>=3.10.2",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "python-multipart>=0.0.32",
    "python-telegram-bot>=22.8",
    "sendgrid>=6.12.5",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.51.0",
    "weasyprint>=69.0",
]
